--- a/FRONTEND/JS/1__HTML_&_JS/FIle_2.html
+++ b/FRONTEND/JS/1__HTML_&_JS/FIle_2.html
@@ -11,6 +11,6 @@
 <body>
     <script src="./JS_1.js">
     </script>
-    <button type="button" onclick="msg()" >Click Me!</button>
+    <button type="button" onclick="msg_2()" >Click Me!</button>
 </body>
 </html>
