--- a/FRONTEND/JS/1__HTML_&_JS/FIle_2.html
+++ b/FRONTEND/JS/1__HTML_&_JS/FIle_2.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./JS_1.js">
+    <script type="text/javascript" src="./JS_1.js">
     </script>
     <button type="button" onclick="msg_2()" >Click Me!</button>
 </body>
