--- a/FRONTEND/JS/2__BASICS/3__Loops.html
+++ b/FRONTEND/JS/2__BASICS/3__Loops.html
@@ -27,9 +27,19 @@
                 }
         }
 
-        while (condition) {
-            
+        let i =0;
+        while (i<10) {
+            document.write(i);
+            ++i;
         }
+        //while is top tested loop or entry tested loop
+
+        do{
+            document.write(" "+i)
+            ++i;
+        }while (i<25) 
+        //do while is bottom tested loop or exit tested loop
+
     </script>
 </body>
 </html>
